backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: backend
  labels:
    app: backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: 833558168913.dkr.ecr.ap-northeast-2.amazonaws.com/lic-team-prj/backend:0.1.0
        ports:
        - containerPort: 8000
