frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: frontend
  labels:
    app: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: 833558168913.dkr.ecr.ap-northeast-2.amazonaws.com/lic-team-prj/frontend:0.1.0
        ports:
        - containerPort: 80
